# google-task-tauri

./: .env.sample  .gitignore  README.md  client_secret_394505623537-n78mpn7rpc18csp74h07mjufbjhihean.apps.googleusercontent.com.json  index.html  package-lock.json  package.json  password.txt  tailwind.config.ts  vite.config.ts
.github/workflows/: main.yml  website.yml
app/: layout.tsx  page.tsx
app/[slug]/: page.tsx
components/ui/: downloadButton.tsx  header.tsx  hero.tsx  nav.tsx
docs/: README.md
libs/: helper.ts  posts.ts  types.ts
src/: App.tsx  main.tsx  states.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: libs.rs  main.rs
src-tauri/src/libs/: access_token.rs  argument.rs  auth.rs  filehelper.rs  response.rs  tauri_actions.rs
src/assets/: credentials.ts
src/components/: DownloadButton.tsx  Header.tsx  TaskPage.tsx  TaskPageOld.tsx
src/components/ui/: AddCategory.tsx  AddTaskForm.tsx  Header.tsx  LoggedInHeader.tsx  TaskCategoryList.tsx  TaskItem.tsx  TaskList.tsx
src/config/: credentials.ts  settings.ts  states.ts
src/helpers/: DBStores.ts  StoreDb.ts  auth.ts  cacher.ts  commands.ts  eventlistner.ts  googleapihelper.ts  invoker.ts  task.ts  windowhelper.ts
src/libs/: helper.ts
src/pages/: privacy-policy.tsx  term-of-service.tsx
src/types/: googleapis.ts  response.ts  taskapi.ts
static-pages/: privacy-policy.md  term-of-service.md
