[package]
name = "google-task"
version = "0.0.0"
description = "Google Task by Codad5"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "notification-all", "fs-all", "dialog-confirm", "shell-open", "dialog-ask", "dialog-message"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-tasks1 = "5.0.2"
oauth2 = "3.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
