[package]
name = "google-task"
version = "0.0.1"
description = "Google Task by Codad5"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "updater", "global-shortcut-all", "notification-all", "fs-all", "dialog-confirm", "shell-open", "dialog-ask", "dialog-message"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.2.0", features = ["std", "borsh-derive", "derive", "bson", "bytes", "ascii", "de_strict_order", "rc", "unstable__schema"] }
cocoon = "0.4.1"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-context-menu = "0.6.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
dotenv = "0.15.0"
lazy_static = "1.4.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
